<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>fitting_tab</class>
 <widget class="QWidget" name="fitting_tab">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>821</width>
    <height>809</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="controlLayout">
     <property name="sizeConstraint">
      <enum>QLayout::SetDefaultConstraint</enum>
     </property>
     <property name="rightMargin">
      <number>0</number>
     </property>
     <item>
      <widget class="QComboBox" name="plot_type_combo"/>
     </item>
     <item>
      <widget class="QCheckBox" name="tiled_plot_checkbox">
       <property name="text">
        <string>Tiled plot by:</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QComboBox" name="tiled_by_combo">
       <property name="currentIndex">
        <number>-1</number>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QCheckBox" name="plot_raw_checkbox">
       <property name="text">
        <string>Plot raw</string>
       </property>
       <property name="checked">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QCheckBox" name="plot_diff_checkbox">
       <property name="text">
        <string>Plot difference</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="external_plot_button">
       <property name="text">
        <string>External Plot</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QFrame" name="canvasFrame">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Plain</enum>
     </property>
     <property name="lineWidth">
      <number>1</number>
     </property>
     <property name="midLineWidth">
      <number>0</number>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="optionsLayout">
     <property name="sizeConstraint">
      <enum>QLayout::SetDefaultConstraint</enum>
     </property>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
